--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-heroku==0.3.1
 django-mapbox-location-field==1.6.1
 django-registration==3.1
 folium==0.11.0
+gunicorn==20.0.4
 idna==2.10
 importlib-metadata==1.7.0
 Jinja2==2.11.2
